--- a/style.css
+++ b/style.css
@@ -17,8 +17,27 @@ h3 {
 }
 
 /* Header */
-header {
+header{
+  text-align: center
+}
+.container{
+  display:flex;
   text-align: center;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.title{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+}
+.items{
+  display: flex;
+  flex-direction: column;
+  text-align:left;
 }
 
 /* Containers */
@@ -38,7 +57,7 @@ article div {
 }
 
 /* Paragraphs */
-p {
+p { 
   line-height: 1.5;
 }
 
@@ -65,6 +84,7 @@ img {
 .image-circle {
   border: 2px solid #003049;
   border-radius: 50%;
+ 
 }
 
 /* Footer */
